--- a/index.html
+++ b/index.html
@@ -81,6 +81,14 @@
             class="form-control text-light bg-dark"
             id="Input"
           />
+          <label class="text-light mt-3" for="">
+          <input 
+            type="date"
+            class="form-control text-light bg-dark "
+            id="InputDate"          
+          />
+          ( OPCIONAL ) 👆
+          </label>
         </div>
         <button type="submit" class="btn btn-outline-primary">Guardar</button>
       </form>
@@ -89,6 +97,7 @@
         <thead>
           <tr>
             <th scope="col">TAREA</th>
+            <th scope="col">FECHA LIMITE</th>
             <th scope="col">ACCIONES</th>
           </tr>
         </thead>
